--- a/src/components/home/services/services.css
+++ b/src/components/home/services/services.css
@@ -31,17 +31,17 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-  border: 2px solid var(--purple);
+   border: 2px solid var(--border-ser); 
   border-radius: 10px;
   padding: 20px;
   text-align: start;
-  box-shadow: 0px 0.5rem 1rem #808080b0;
+  /* box-shadow: 0px 0.5rem 1rem #808080b0; */
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-
+  background:var(--back-serv);
+  
   &:hover {
     transform: scale(1.1) translateY(-5px);
     transition: all 0.3s linear;
-    border: 2px solid var(--purple);
   }
 }
 
