--- a/src/components/home/services/services.css
+++ b/src/components/home/services/services.css
@@ -37,7 +37,7 @@
   text-align: start;
   /* box-shadow: 0px 0.5rem 1rem #808080b0; */
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-  background:var(--back-serv);
+  background:var(--back-serveice);
   
   &:hover {
     transform: scale(1.1) translateY(-5px);
