--- a/src/components/home/about/about.css
+++ b/src/components/home/about/about.css
@@ -1,170 +1,134 @@
-.about {
-  padding-left: 60px;
-  padding-right: 60px;
-  margin-left: auto;
-  margin-right: auto;
-  background: var(--background-color);
-  padding-bottom: 50px;
-  padding-top: 50px;
+.headerAbout {
   text-align: center;
-  position: relative;
-
-  h1 {
-    color: var(--words);
-    font-size: 48px;
-    margin: 10px auto;
-    margin-bottom: 50px;
-  }
-
-  .mix {
-    margin-top: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 auto;
-
-    .text {
-      flex-basis: calc(100% - 500px);
-      text-align: start;
-
-      h2 {
-        margin-bottom: 35px;
-        color: var(--DarkPurple);
-      }
-
-      .one {
-        font-weight: bold;
-        line-height: 1.7;
-        margin-bottom: 47px;
-        width: 70%;
-      }
-
-      hr {
-        width: 50%;
-        display: inline-block;
-        border-color: var(--pink);
-        margin-bottom: 39px;
-      }
-
-      .two {
-        line-height: 1.7;
-        color: var(--color-nav);
-        width: 70%;
-        font-weight: 600;
-        margin-bottom: 20px;
-      }
-
-      button {
-        margin-top: 20px;
-        width: 159px;
-        height: 53px;
-        text-align: center;
-        padding: 13px 17px;
-        border: 2px solid var(--purple);
-        border-radius: 6px;
-        color: var(--pink);
-        font-weight: 600;
-        font-size: 16px;
-        cursor: pointer;
-        transition: all 0.3s linear;
-        margin-right: 5px;
-      }
-
-      button:hover {
-        transform: scale(1.1);
-        box-shadow: 0rem 0rem 1.3rem var(--purple);
-      }
-    }
-  }
+  font-size: 48px;
+  color: var(--words);
 }
 
-.about .mix .image-section {
+.big-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 35px;
+  width: 90vw;
+  height: auto;
+  padding: 20px;
+  margin: 70px 30px;
 }
 
-.image-grid {
-  position: relative;
+.text {
+  flex: 1;
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  padding: 23px;
 }
 
-.image-item {
+.text h2 {
+  margin-bottom: 31px;
+  font-size: 30px;
+  color: var(--purple);
+}
+
+.text p {
+  margin-bottom: 24px;
+  line-height: 1.5;
+  font-size: 22px;
+  width: 100%;
+}
+
+.text hr {
+  margin: 10px 0px;
+  height: 3px;
+  width: 100%;
+  background: var(--purple);
+}
+
+.containerAbout {
+  width: 800px;
+  max-width: 552px;
+  height: 350px;
   position: relative;
-  border-radius: 7px;
-  overflow: hidden;
+  border: 7px solid #310d4600;
+  border-radius: 13px;
+  box-shadow: 0px 0px 8px 2px var(--shadow);
 }
 
-.image-item.large {
-  width: 245px;
-  height: 361px;
-  z-index: 1;
-}
-
-.image-item.small {
-  width: 150px;
-  height: 147px;
+.images {
+  width: 100%;
+  height: calc(100% - 40px);
   position: absolute;
+  overflow: hidden;
+  transition: transform 1.5s ease-in-out;
+  display: flex;
+  border-radius: 6px;
 }
 
-.image-item.top-right {
-  top: -1px;
-  right: -157px;
-  z-index: 2;
-}
-
-.image-item.bottom-left {
-  bottom: 1px;
-  left: 250px;
-  z-index: 2;
-  height: 208px;
-  width: 154px;
-}
-
-.image-item img {
+.images img {
   width: 100%;
   height: 100%;
+  position: absolute;
   object-fit: cover;
+  flex-shrink: 0;
+  
 }
 
-@media (max-width: 992px) {
-  .about .mix {
+.images img:not(.active) {
+  top: 0;
+  left: -100%;
+}
+
+.dotContainer {
+  position: absolute;
+  bottom: 5px;
+  z-index: 3;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.dotContainer .dot {
+  width: 15px;
+  height: 15px;
+  margin: 0px 2px;
+  border: 3px solid #bbb;
+  display: inline-block;
+  border-radius: 50%;
+  transition: background-color 0.6s ease;
+}
+
+.dotContainer .active {
+  background-color: #555;
+}
+
+@keyframes next1 {
+  from {
+    left: 0%;
+  }
+
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes next2 {
+  from {
+    left: 100%;
+  }
+
+  to {
+    left: 0%;
+  }
+}
+@media (max-width: 1192px) {
+  .big-container {
     flex-direction: column;
-    text-align: center;
   }
-
-  .about .mix .images::before {
-    display: none;
-  }
-
-  .about .mix .text {
-    .one,
-    .two {
-      width: 100%;
-    }
-  }
-
-  .image-section {
-    margin-bottom: 75px;
-  }
-
-  .image-item.large {
-    width: 185px;
-    margin-right: 131px;
-  }
-
-  .image-item.top-right {
-    top: -1px;
-    right: -27px;
-  }
-
-  .image-item.bottom-left {
-    bottom: 0px;
-    left: 190px;
-    z-index: 2;
-    height: 208px;
-    width: 154px;
+}
+@media (max-width: 768px) {
+  .containerAbout {
+    width: 500px;
+    max-width: 352px;
+    height: 350px;
+    
   }
 }
