--- a/src/components/home/services/services.css
+++ b/src/components/home/services/services.css
@@ -2,6 +2,7 @@
   text-align: center;
   padding-top: 20px;
   font-size: 18px;
+  margin-bottom: 66px;
 }
 
 *::selection {
@@ -31,13 +32,14 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-   border: 2px solid var(--border-ser); 
+   border: 3px solid var(--border-ser); 
   border-radius: 10px;
   padding: 20px;
   text-align: start;
   /* box-shadow: 0px 0.5rem 1rem #808080b0; */
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   background:var(--back-serveice);
+  backdrop-filter: blur(10);
   
   &:hover {
     transform: scale(1.1) translateY(-5px);
