--- a/src/components/home/demo/demo.css
+++ b/src/components/home/demo/demo.css
@@ -11,7 +11,7 @@
     }
 
     p {
-      text-align: start;
+      text-align: justify;
       width: 60%;
       margin: 47px auto;
       font-weight: 600;
