--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -31,16 +31,18 @@ header .container .info {
 }
 
 header .container .info h1 {
-  font-size: 30px;
+  font-size: 2.5rem;
   color: var(--DarkPurple);
   width: 70%;
+text-align: justify;
+
 }
 
 header .container .info p {
   width: 70%;
   font-size: 25px;
   margin-top: 45px;
-
+text-align: justify;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-style: normal;
