--- a/src/pages/model/model.css
+++ b/src/pages/model/model.css
@@ -15,7 +15,6 @@ main .tabs {
   margin-bottom: 10px;
   border-bottom: 2px solid var(--purple);
   margin-left: 0;
-
   li {
     border: 2px solid var(--purple);
     border-bottom: none;
@@ -27,12 +26,22 @@ main .tabs {
     align-items: center;
     background-color: var(--white-background);
     color: var(--link-color);
-    padding: 5px 15px;
+    padding: 5px 10px;
+    gap: 10px;
 
     &:hover,
     &.active {
       background-color: var(--purple);
       color: #f0f0f0;
+      .tab-help {
+        border: 2px solid #f0f0f0;
+      }
+    }
+
+    .tab-help {
+      border: 2px solid black;
+      border-radius: 50%;
+      padding: 2px;
     }
   }
 }
