--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -43,7 +43,7 @@ header .container .info p {
   font-size: 25px;
   margin-top: 45px;
 text-align: justify;
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
   font-weight: 300;
   font-style: normal;
 
@@ -84,7 +84,7 @@ header .container .image {
 
 .container .image .top-image {
   z-index: 2;
-  opacity: 0.5;
+  opacity: 1;
 }
 
 .container .image .slider {
