--- a/src/components/home/services/services.css
+++ b/src/components/home/services/services.css
@@ -36,7 +36,6 @@
   border-radius: 10px;
   padding: 20px;
   text-align: start;
-  /* box-shadow: 0px 0.5rem 1rem #808080b0; */
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   background:var(--back-serveice);
   backdrop-filter: blur(10);
@@ -53,11 +52,11 @@
 
 .services .container .group .srv h2 {
   font-size: 25px;
-  font-family: "Philosopher", sans-serif;
+  /* font-family: "Philosopher", sans-serif; */
 }
 
 .services .container .group .srv p {
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
   font-weight: 300;
   font-style: normal;
   line-height: 1.4;
