--- a/src/index.css
+++ b/src/index.css
@@ -80,9 +80,8 @@ a {
 body {
   background-color: white;
   color: black;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
+   font-family:  Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; 
   font-style: normal;
 }
 
