--- a/src/index.css
+++ b/src/index.css
@@ -76,12 +76,16 @@ ul {
 a {
   text-decoration: none;
 }
+@import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@300..700&display=swap');
 
+body {
+    font-family: 'Lemonada', cursive;
+}
 body {
   background-color: white;
   color: black;
-   font-family:  Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; 
+   /* font-family:  Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;  */
   font-style: normal;
 }
 
