--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@300..700&display=swap');
+
+body {
+    font-family: 'Lemonada', cursive;
+}
+
 nav {
   padding: 5px 0;
   box-shadow: 0px -0.5rem 1rem rgb(123, 120, 120);
@@ -10,6 +16,10 @@ nav .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: "Lemonada", serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
 }
 
 nav .logo {
@@ -17,7 +27,7 @@ nav .logo {
   align-items: center;
 
   img {
-    width: 80px;
+    width: 320px;
   }
 
   span {
