--- a/src/index.css
+++ b/src/index.css
@@ -15,21 +15,21 @@
   --background: linear-gradient(90deg, var(--back), var(--ground));
   --DarkPurple: rgb(88, 22, 195);
   --links-background: rgb(255, 255, 255, 0.45);
-  --back-serv:#f1e9e9;
+  --back-serv: #f1e9e9;
   --light-purple: #cec5f78e;
   --white: #ffffff;
   --back-serveice: linear-gradient(10deg, var(--light-purple), var(--white), var(--light-purple));
-  --border-ser:rgba(255, 255, 255, 0);
-  --background-footer:#4b2480;
+  --border-ser: rgba(255, 255, 255, 0);
+  --background-footer: #4b2480;
   --linear: #cec5f7;
   --grad: #f4f7fc;
   --linear-gradient: linear-gradient(180deg, var(--linear), var(--grad));
   --shadow: rgba(0, 0, 0, 0.3);
-} 
+}
 
 body[data-theme="dark"] {
-  --linear:  #161518;
-  --grad: #060124 ;
+  --linear: #161518;
+  --grad: #060124;
   --linear-gradient: linear-gradient(100deg, var(--linear), var(--grad));
   background: linear-gradient(100deg, var(--linear), var(--grad));
   --light-purple: #161518;
@@ -38,9 +38,9 @@ body[data-theme="dark"] {
   color: white;
   --color-nav: white;
   --links-background: rgb(0, 0, 0, 0.85);
-  --back-serv:#030f19;
-  --border-ser:rgb(192, 188, 196);
-  --background-footer:#4b248052;
+  --back-serv: #030f19;
+  --border-ser: rgb(192, 188, 196);
+  --background-footer: #4b248052;
   --shadow: rgba(255, 253, 253, 0.532);
 
   /* --back: #030f19; */
@@ -60,11 +60,13 @@ body[data-theme="dark"] {
   background-color: transparent;
   color: transparent;
 }
+
 ::-webkit-scrollbar-thumb {
   background-color: var(--purple);
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+
 ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
@@ -76,15 +78,31 @@ ul {
 a {
   text-decoration: none;
 }
-@import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@300..700&display=swap');
+
+/* @import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@300..700&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@300..700&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap'); */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Kotta+One&family=Lemonada:wght@300..700&family=Mooli&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap');
 
 body {
-    font-family: 'Lemonada', cursive;
+  /* font-family: 'Lemonada', cursive;
+  font-style: normal; */
+  
+  /* font-family: "Kotta One", serif;
+  font-weight: 500;
+  font-style: normal; */
+
+  font-family: "Sansita", sans-serif;
+  font-weight: 400;
+  font-style: italic;
 }
+
 body {
   background-color: white;
   color: black;
-   /* font-family:  Roboto,
+  /* font-family:  Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;  */
   font-style: normal;
 }
