--- a/src/components/model/button/generateButton.css
+++ b/src/components/model/button/generateButton.css
@@ -13,6 +13,7 @@
   cursor: pointer;
   width: 512px;
   margin: 0 auto;
+  font-family: "Lemonada", serif;
 
   .loading {
     display: inline-block;
