--- a/src/components/model/recommendations/Recommendations.css
+++ b/src/components/model/recommendations/Recommendations.css
@@ -97,15 +97,24 @@
 
 .recommendations-container .recommendations .recommendation-response p {
   margin: 16px 0;
+  font-family: sans-serif;
+    text-align: justify;
+    color: #151414;
+    line-height: 1.7;
+    border-bottom: 1px solid lightgrey;
 }
 
 .recommendations-container
   .recommendations
   .recommendation-response
   p.selected {
-  background: #f0f0f0;
-  border-left: 5px solid var(--purple);
-  padding: 10px;
+    background: #f0f0f0;
+    border-left: 5px solid var(--purple);
+    padding: 10px;
+    font-family: sans-serif;
+    font-size: 18px;
+    text-align: justify;
+    color: #444242;
 }
 
 .recommendations-container .recommendations .recommendation-response ul {
