--- a/src/index.css
+++ b/src/index.css
@@ -84,19 +84,21 @@ a {
 /* @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap'); */
 
 
-@import url('https://fonts.googleapis.com/css2?family=Kotta+One&family=Lemonada:wght@300..700&family=Mooli&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Kotta+One&family=Lemonada:wght@300..700&family=Mooli&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&family=Kotta+One&family=Lemonada:wght@300..700&family=Mooli&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&family=Signika:wght@300..700&display=swap');
 body {
   /* font-family: 'Lemonada', cursive;
   font-style: normal; */
   
-  /* font-family: "Kotta One", serif;
+  font-family: "Kotta One", serif;
   font-weight: 500;
-  font-style: normal; */
+  font-style: normal;
 
-  font-family: "Sansita", sans-serif;
+  /* font-family: "Sansita", sans-serif;
   font-weight: 400;
-  font-style: italic;
+  font-style: italic; */
+
+ 
 }
 
 body {
