--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -2,17 +2,17 @@
 
 
 header {
-  padding-top: 100px;
-  padding-bottom: 80px;
+  padding-top: 45px;
+  padding-bottom: 20px;
   background: var(--linear-gradient);
   /* background: url(../../../src/assets/Desktop.png) no-repeat center/cover; */
- 
+
 }
 
 header .container {
   width: 90%;
   margin: 0 auto;
-  margin: 100px 90px ;
+  margin: 100px 90px;
 }
 
 header .container .row {
@@ -34,23 +34,25 @@ header .container .info {
 }
 
 header .container .info h1 {
-  font-size: 2.5rem;
+  font-size: 1.6rem;
   color: var(--DarkPurple);
   width: 70%;
-text-align: justify;
+  text-align: start;
+  word-spacing: 0px;
 
 }
 
 header .container .info p {
   width: 70%;
-  font-size: 25px;
+  font-size: 19px;
   margin-top: 45px;
-text-align: justify;
-  /* font-family: "Roboto", sans-serif; */
+  text-align: justify;
   font-family: "Mooli", sans-serif;
   font-weight: 600;
   font-style: normal;
   line-height: 1.6;
+  word-spacing: -1px;
+
 }
 
 @media (max-width: 1050px) {
@@ -67,6 +69,9 @@ header .container .image {
 }
 
 @media (max-width: 600px) {
+  header .container  {
+    margin: 0px;
+  }
   header .container .image {
     width: 100%;
   }
@@ -81,6 +86,7 @@ header .container .image {
   height: 100%;
   border-radius: 15px;
 }
+
 .container .image .bottom-image {
   z-index: 1;
 }
@@ -118,7 +124,7 @@ header .buttons .view-demo {
   border: 3px solid var(--purple);
   border-radius: 6px;
   color: white;
-  font-weight:500;
+  font-weight: 500;
   font-size: 20px;
   border: none;
   cursor: pointer;
@@ -132,6 +138,7 @@ header .buttons .view-demo {
   background: transparent;
   color: var(--purple);
   border: 3px solid var(--purple);
+
   span {
     margin-left: 7px;
   }
