--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -7,26 +7,27 @@
 .login-container {
     background: url(../../../src/assets/backgroundLogin.png) no-repeat center/cover;
     height: 100vh;
+    padding: 20px 0px
 }
 
 #login-form {
     width: 50%;
-    margin: auto;
-    padding: 40px;
+    margin:3px auto;
+    padding: 20px;
     background: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.276);
     border-radius: 8px;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -45%);
+    transform: translate(-50%, -45%); */
 
 }
 
 .form-title {
     text-align: center;
     color: #333;
-    margin: 15px 0px;
+    margin: 1px 0px;
     font-family: "Lemonada", serif;
 
 }
@@ -80,7 +81,7 @@ input {
 .login-with {
     text-align: center;
     position: relative;
-    margin: 15px 0px;
+    margin: 5px 0px;
     display: flex;
     align-items: center;
     padding: 0px 10px;
