--- a/src/components/register/Register.css
+++ b/src/components/register/Register.css
@@ -6,28 +6,30 @@
 
 .bodyForm {
     background: url(../../../src/assets/backgroundLogin.png) no-repeat center/cover;
-    height: 100vh;
+    height: 120vh;
+    padding: 30px 0px
 
 }
 
 #register-form {
     width: 50%;
-    margin: auto;
-    padding: 40px;
+    margin:3px auto;
+    padding: 20px;
     background: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.276);
     border-radius: 8px;
-    position: absolute;
+
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -45%);
+    transform: translate(-50%, -45%); */
 
 }
 
 .form-title {
     text-align: center;
     color: #333;
-    margin: 15px 0px;
+    margin:  0px;
     font-family: "Lemonada", serif;
 
 }
@@ -45,8 +47,8 @@ p {
 }
 
 .form-group {
-    margin-bottom: 15px;
-    font-size: 24px;
+    margin-bottom: 0x;
+    font-size: 16px;
     color: #333;
     margin: 20px 0px;
     font-family: "Lemonada", serif;
@@ -68,13 +70,13 @@ input {
 
 .register {
     width: 100%;
-    padding: 16px;
+    padding: 10px;
     background: var(--gradient);
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
      font-family: "Lemonada", serif;
 }
