--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,7 +36,16 @@ nav .logo {
     font-size: 16px;
   }
 }
-
+.logout-button{
+  padding: 6px 22px;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
+    font-family: 'Lemonada';
+    font-weight: 800;
+    border: none;
+    cursor: pointer;
+}
 nav .menu {
   cursor: pointer;
   display: none;
