--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -14,7 +14,7 @@
     width: 50%;
     margin:3px auto;
     padding: 20px;
-    background: #ffffff;
+    background: var( --grad);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.276);
     border-radius: 8px;
     /* position: absolute;
@@ -26,7 +26,7 @@
 
 .form-title {
     text-align: center;
-    color: #333;
+    color: var(--color);
     margin: 1px 0px;
     font-family: "Lemonada", serif;
 
@@ -40,7 +40,7 @@
 
 p {
     text-align: center;
-    color: #666;
+    color: var(--color);
     margin: 15px 10px;
     .account{
         text-decoration: underline;
@@ -51,7 +51,7 @@ p {
 .password {
     margin-bottom: 15px;
     font-size: 24px;
-    color: #333;
+    color: var(--color);
     margin: 20px 0px;
     font-family: "Lemonada", serif;
 
@@ -100,10 +100,7 @@ input {
     }
 }
 
-.loginBtn,
-.signBtn {
-
-
+.loginBtn {
     margin: 15px 0px;
     width: 100%;
     height: 55px;
@@ -118,6 +115,24 @@ input {
     font-optical-sizing: auto;
     font-weight: bold;
     font-style: normal;
+}
+
+.signBtn {
+    margin: 15px 0px;
+    width: 100%;
+    height: 55px;
+    border-radius: 8px;
+    border: none;
+    color: #959595;
+   border: 2px solid #959595;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    font-family: "Lemonada", serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+    background-color: white;
 }
 
 @media (max-width: 786px) {
