--- a/src/components/register/Register.css
+++ b/src/components/register/Register.css
@@ -6,19 +6,18 @@
 
 .bodyForm {
     background: url(../../../src/assets/backgroundLogin.png) no-repeat center/cover;
-    height: 120vh;
+    height: 150vh;
     padding: 30px 0px
-
 }
 
 #register-form {
     width: 50%;
-    margin:3px auto;
+    margin: 3px auto;
     padding: 20px;
     background: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.276);
     border-radius: 8px;
-
+    background: var( --grad);
     /* position: absolute;
     top: 50%;
     left: 50%;
@@ -28,8 +27,8 @@
 
 .form-title {
     text-align: center;
-    color: #333;
-    margin:  0px;
+    color: var(--color);
+    margin: 0px;
     font-family: "Lemonada", serif;
 
 }
@@ -49,7 +48,7 @@ p {
 .form-group {
     margin-bottom: 0x;
     font-size: 16px;
-    color: #333;
+    color: var(--color);
     margin: 20px 0px;
     font-family: "Lemonada", serif;
 
@@ -78,7 +77,7 @@ input {
     cursor: pointer;
     font-size: 18px;
     font-weight: 600;
-     font-family: "Lemonada", serif;
+    font-family: "Lemonada", serif;
 }
 
 @media (max-width: 786px) {
@@ -125,4 +124,45 @@ input {
         font-size: 16px;
         /* font-weight: 600; */
     }
+}
+
+.login-with {
+    text-align: center;
+    position: relative;
+    margin: 5px 0px;
+    display: flex;
+    align-items: center;
+    padding: 0px 10px;
+    justify-content: center;
+
+    hr {
+        width: 30%;
+    }
+
+    .login-with {
+        text-align: center;
+        position: relative;
+        margin: 15px 0px;
+        display: flex;
+        align-items: center;
+        padding: 0px 10px;
+    }
+}
+
+.signBtn {
+    margin: 15px 0px;
+    width: 100%;
+    height: 55px;
+    border-radius: 8px;
+    border: none;
+    color: #959595;
+    border: 2px solid #959595;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    font-family: "Lemonada", serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+    background-color: white;
 }
