add custom selection

--- a/src/pages/model/model.css
+++ b/src/pages/model/model.css
@@ -95,3 +95,21 @@ main .container .images-container {
   flex-wrap: wrap;
 }
 
+main .container .images-container .divider {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1.5px;
+  height: 80%;
+  background: var(--purple);
+  display: block;
+}
+
+@media (max-width: 1180px) {
+  main .container .images-container .divider {
+    height: 1.5px;
+    width: 80%;
+  }
+}
+
