--- a/src/components/model/imageContainer/heatmapContainer/heatmapContainer.css
+++ b/src/components/model/imageContainer/heatmapContainer/heatmapContainer.css
@@ -12,3 +12,20 @@
     opacity: 0.5;
   }
 }
+
+.slider {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(50%, -50%);
+  z-index: 3;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  padding: 3px;
+  border-radius: 50%;
+  cursor: ew-resize;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
