--- a/src/pages/model/model.css
+++ b/src/pages/model/model.css
@@ -15,6 +15,7 @@ main .tabs {
   margin-bottom: 10px;
   border-bottom: 2px solid var(--purple);
   margin-left: 0;
+  flex-wrap: wrap;
   li {
     border: 2px solid var(--purple);
     border-bottom: none;
